--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://cdn.bootcss.com/vue/2.5.2/vue.min.js"></script>
+    <!--<script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>-->
+    <!-- 引入样式 -->
+    <link rel="stylesheet" href="https://cdn.bootcss.com/element-ui/2.3.5/theme-chalk/index.css">
+    <!-- 引入组件库 -->
+    <script src="https://cdn.bootcss.com/element-ui/2.3.5/index.js"></script>
+
+    <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
   </body>
 </html>
