--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <script src="https://cdn.bootcss.com/vue/2.5.2/vue.min.js"></script>
-    <!--<script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>-->
-    <!-- 引入样式 -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/element-ui/2.3.5/theme-chalk/index.css">
-    <!-- 引入组件库 -->
-    <script src="https://cdn.bootcss.com/element-ui/2.3.5/index.js"></script>
 
+    <script src="https://cdn.bootcss.com/vue/2.5.2/vue.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.bootcss.com/element-ui/2.3.5/theme-chalk/index.css">
+    <script src="https://cdn.bootcss.com/element-ui/2.3.5/index.js"></script>
     <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
+    <!--<script type=text/javascript src="/static/webpjs-0.0.2.min.js"></script>-->
+    <script>(function(){var WebP=new Image();WebP.onload=WebP.onerror=function(){
+      if(WebP.height!=2){var sc=document.createElement('script');sc.type='text/javascript';sc.async=true;
+        var s=document.getElementsByTagName('script')[0];sc.src='/static/webpjs-0.0.2.min.js';s.parentNode.insertBefore(sc,s);}};
+      WebP.src='data:image/webp;base64,UklGRjoAAABXRUJQVlA4IC4AAACyAgCdASoCAAIALmk0mk0iIiIiIgBoSygABc6WWgAA/veff/0PP8bA//LwYAAA';})();</script>
   </body>
 </html>
